--- a/index.html
+++ b/index.html
@@ -5,7 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Hello Git and Github</h1>
+<body class="myoverall">
+    <style>
+        h1 {
+            background-color: beige;
+            color:antiquewhite;
+        }
+        .Myfirstclass {
+            color:blue;
+            font-size: 18px;
+        }
+        #myfirstid {
+            color:aquamarine;
+            background-color: aqua;
+        }
+        .myoverall {
+            background-color:burlywood;
+        }
+
+
+
+        .mydesign {
+    background-color: lightgreen;
+}
+    </style>
+    <h1 class="Myfirstclass">Hello Git and Github</h1>
+    <p id="myfirstid">The quick brown fox jump<br> over the lazy the lazy dog</p>
+    <h2>My second header</h2>
+      <p id="myfirstid">This is my second paragraph.</p>
+
+
+      <form>
+          <label for="First Name">First name</label><br>
+          <input type="text" id="First name" value="Your firt name.."><br>
+          <label for="Last Name">Last name</label><br>
+          <input type="text" id="Last name" value="Your last name.."><br>
+          <label for="Country">Country</label><br>
+          <input type="text" id="Country" value="Australia"><br>
+          <label for="Subject">Subject</label><br>
+          <input type="text" id="Subject" value="Write something.."><br><br>
+          <input type="Submit" value="Submit" class="mydesign">
+          
+      </form>
+
+      
 </body>
 </html>
